--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "vite --open"
+    "start": "node src/locale/generateTranslations.cjs && vite --open"
   },
   "dependencies": {
+    "i18next": "^23.16.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
